# brand-assets

./: .fastmcp-deploy  .gitignore  CLAUDE.md  CLEANUP_GUIDE.md  CLOUD_DEPLOYMENT_READY.md  CURRENT_STATUS.md  DISTRIBUTION_OPTIONS.md  FASTMCP_CLOUD_SETUP.md  INSTALL.md  PHASE_1_2_COMPLETE.md  README.md  RUN_CLEANUP.md  SUCCESS_SUMMARY.md  TEAM_SETUP.md  ciq_brand_assets_cloud.py  ciq_brand_assets_fastmcp.py  cleanup_all_directories.py  cleanup_and_reorganize.py  debug_cleanup.py  enhanced_parser.py  generate_clean_metadata.py  generate_metadata.py  generate_metadata_recursive.py  integrate_system.py  package.json  pyproject.toml  requirements.txt  server.py  test_server.py  trigger_deployment.py
.github/workflows/: update-metadata.yml
RLC(X)-logos/_Archived/RLC(X) WIP/: RLC_logos_rd3.ai
fuzzball logos/Horizontal/Flat/: Fuzzball_logo_flat.ai  Fuzzball_logo_flat.eps
metadata/: asset-inventory.json
src/: index.js
src/ciq_brand_assets/: server.py
